# fixprove

./: .gitignore  CLIENT-SUMMARY-4.8-npm-oidc-migration.md  CLIENT-SUMMARY-4.9-push-event-closure-and-wrangler-v4.md  CONTRIBUTING.md  COVER-FIX-STRATEGY.md  FIXPROVE_MASTER_BUILD_PLAN.md  KS-MANIFEST-UNIFIED-PROOF-OF-PROCESS.md  KS-REPORT-0.1-name-clearance.md  KS-REPORT-0.2-trademark-stripe-scaffold.md  KS-REPORT-1.1-symbol-extraction.md  KS-REPORT-1.2-knowledge-base.md  KS-REPORT-1.3-resolver-cli.md  KS-REPORT-1.4-ts-resolver.md  KS-REPORT-2.1-github-app.md  KS-REPORT-2.2-kv-worker.md  KS-REPORT-3.1-packaging-release.md  KS-REPORT-3.2-launch-assets.md  KS-REPORT-4.10-ci-verification-close.md  KS-REPORT-4.11.5-addendum-cvr-issued.md  KS-REPORT-4.11.5-business-registration-and-pre-4.12-checks.md  KS-REPORT-4.12A-public-surface-audit.md  KS-REPORT-4.12C-github-cold-start.md  KS-REPORT-4.12D-addendum-2-record-correction.md  KS-REPORT-4.12D-addendum-live-verification.md  KS-REPORT-4.12D-fixprove-dev-reality-sync.md  KS-REPORT-4.2-release-gate-fix.md  KS-REPORT-4.3-addendum.md  KS-REPORT-4.3-template-fix-and-b4b5-prep.md  KS-REPORT-4.4-typescript-b5.md  KS-REPORT-4.5-typescript-defects-bc.md  KS-REPORT-4.6-ci-python-gate.md  KS-REPORT-4.7-d2-public-flip-and-provenance.md  KS-REPORT-4.8-npm-oidc-migration.md  KS-REPORT-4.9-addendum-2-live-deploy-verified.md  KS-REPORT-4.9-addendum-close-verification.md  KS-REPORT-4.9-push-event-closure-and-wrangler-v4.md  KS-REPORT-MILESTONE-0-foundation.md  LAUNCH-COPY-BUILD-IN-PUBLIC.md  MILESTONE-0-CLIENT-SUMMARY.md  NEXT-SESSION-4.10-STARTING-PROMPT.md  (+21 more)
.github/workflows/: ci.yml  release.yml
app/: README.md  package.json  tsconfig.json
app/src/: callbackHandler.ts  checkRun.ts  findings.ts  index.ts  oidcVerify.ts  pendingStore.ts  webhookHandler.ts
app/templates/: fixprove-check.yml
app/test/: app.config.test.ts  callbackHandler.test.ts  checkRun.test.ts  findings.test.ts  index.test.ts  oidcVerify.test.ts  pendingStore.test.ts  webhookHandler.test.ts
cli/: README.md  package.json
cli/src/: index.ts
cli/src/commands/: check.ts
cli/test/: check.stub.test.ts
engine/python/: MANIFEST.in  README.md  _kb_worker.py  cli.py  eval_corpus.py  eval_ts_corpus.py  finding.py  knowledge_base.py  pyproject.toml  requirements.txt  resolver.py  symbol_extractor.py  ts_knowledge_base.py  ts_resolver.py  ts_symbol_extractor.py
engine/python/corpus/: NOTES.md  manifest.json  requirements.txt
engine/python/corpus/clean/: degraded_package_usage.py  local_variable_usage.py  stdlib_usage.py  valid_pandas_usage.py  valid_requests_usage.py
engine/python/corpus/hallucinated/: bad_from_import.py  typo_attribute.py  uninstalled_dependency.py
engine/python/corpus/local_fixtures/fp-monkeypatch-demo/: pyproject.toml
engine/python/corpus/local_fixtures/fp-monkeypatch-demo/fp_monkeypatch_demo/: __init__.py
engine/python/tests/: test_cli.py  test_knowledge_base.py  test_resolver.py  test_symbol_extractor.py  test_ts_cli_corpus.py  test_ts_knowledge_base.py  test_ts_resolver.py  test_ts_symbol_extractor.py
engine/python/ts_corpus/: NOTES.md  manifest.json  package-lock.json  package.json
engine/python/ts_corpus/clean/: valid_axios_default.ts  valid_degraded_package_usage.ts  valid_named_and_type_only_import.ts  valid_reexport_and_namespace.ts  valid_relative_import_out_of_scope.ts
engine/python/ts_corpus/hallucinated/: nonexistent_named_import.ts  typo_method_on_axios.ts  uninstalled_package.ts
engine/python/ts_corpus/local_fixtures/fp-ts-clean-demo/: index.d.ts  package.json  sub.d.ts  widget.d.ts
engine/python/ts_corpus/local_fixtures/fp-ts-notypes-demo/: package.json
placeholders/crates-fixprove/: Cargo.toml
placeholders/crates-fixprove/src/: lib.rs
placeholders/npm-fixprove/: index.js  package.json
placeholders/pypi-fixprove/: README.md  pyproject.toml
placeholders/pypi-fixprove/src/fixprove/: __init__.py
session-logs/: SESSION-LOG-2026-07-04-session-4.1-live-deployment.md  SESSION-LOG-2026-07-06-session-4.2-release-gate-fix-and-live-publish.md  SESSION-LOG-2026-07-07-session-4.3-template-fix-and-b4b5-prep.md  SESSION-LOG-2026-07-08-session-4.4-typescript-b5-live-verify-and-release.md  SESSION-LOG-2026-07-10-session-4.6-ci-python-gate.md  SESSION-LOG-2026-07-13-session-4.7-d2-public-flip-and-provenance.md  SESSION-LOG-2026-07-14-session-4.8-npm-oidc-migration.md  SESSION-LOG-2026-07-15-session-4.9-push-event-closure-and-wrangler-v4.md  SESSION-LOG-2026-07-17-session-4.11-audit-and-legal-pause.md  SESSION-LOG-2026-07-23-session-4.12-d-fixprove-dev-reality-sync.md  SESSION-LOG-INDEX.md
web/: README.md  next.config.js  package-lock.json  package.json  tsconfig.functions.json  tsconfig.json  tsconfig.worker.json  wrangler.toml
web/functions/api/: _validate.ts
web/functions/test/: validate.test.ts
web/src/: worker.ts
web/src/app/: globals.css  layout.tsx  page.tsx
worker/: README.md  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts  kvPendingStore.ts
worker/test/: fakeKv.ts  kvPendingStore.test.ts  testJwks.ts  worker.test.ts
